style.css
body {
	background-color:#000080;
	font-family:'Montserrat',serif;
}
.block {
	border: 1.5px solid;
	border-radius:20px;
	overflow:hidden;
	background-color:white;
}
#info {
	position:absolute;
	height:25%;
	width:47.5%;
}
#selectbutton{
	position:absolute;
	width:33.33333%;
	height:30%;
	bottom:0;
}
#addButton{
	position:absolute;
	width:100%;
	height:23%;
	bottom:0;
}

#speakButton{
	position:absolute;
	width:33.33333%;
	height:30%;
	left:33.33333%;
	bottom:0;

}
#setSpeakingTime{
	position:absolute;
	width:33.33333%;
	left:66.66666%;
	height:30%;
	bottom:0;
}


#committeemembers {
	position:absolute;
	width:47.5%;
	height:38.5%;
	top:60%;
}
ul {
    list-style-type: none;
    overflow:hidden; 
    overflow-y:scroll;
}

@font-face {
    font-family: 'Montserrat';
    src: url(montserrat.ttf);
}

}
#infotext{
	position:absolute;
}
.title {
	text-align:center;
	vertical-align:center;
	font-size:2vw;
	-moz-user-select: -moz-none;
   -khtml-user-select: none;
   -webkit-user-select: none;
}
li {
    list-style-type: none;
    font-size:2vw;
}
#speakers {
	position:absolute;
	width:47.5%;
	top:28%;
	height:30%;
}

#speakerslist{
	position:absolute;
	top:32%;
	overflow-y: scroll;

}
#resolutions{
	top:1%;
	width:49%;
	left:50%;
	height:75%;
	position:absolute;
}
#textbox {

	position:relative;
	width:100%;
	height:100%;
}
textarea{
	font-size:2vw;
	border: none;
    overflow: auto;
    outline: none;

    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
}
#timer{
	top:77.5%;
	width:49%;
	left:50%;
	height:21%;
	position:absolute;
}

#logo{
	position:absolute;
	top:0%;
	height:100%;

}
h2 {
	text-align:center;

}
.topic {
	position:relative;
	left:26vh;
	width:53%;
	font-size:2.4vw;
	user-select: none;
	-moz-user-select: -moz-none;
   -khtml-user-select: none;
   -webkit-user-select: none;
}
#commiteelist {
	position:absolute;
	top:25%;
	overflow-y: scroll
}
#startbutton {
	position:absolute;
	width:100%;
	height:30%;
	bottom:38%;
	left:0;
}
#stopbutton {
position:absolute;
	width:100%;
	height:30%;
	bottom:20%;
	left:0;
}
#resetbutton {
position:absolute;
	width:100%;
	height:30%;
	bottom:0%;
	left:0;
}
#timerholder{
	position:relative;
	text-align:center;
	margin-top:1%;
}
#timer{

	font-family:monospace;
	font-size:6vw;
	text-align:center;
	-moz-user-select: -moz-none;
   -khtml-user-select: none;
   -webkit-user-select: none;
}

